Adoption of JCDB in UtBot. Termination of ClassId, MethodId etc in UtBot and switching to usage of this structures in JCDB
#349